@@ -1,6 +1,5 @@
 package com.idn.backend.security;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
@@ -23,13 +22,11 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
 import com.idn.backend.filter.CsrfCookieFilter;
 import com.idn.backend.filter.JWTTokenValidatorFilter;
 import com.idn.backend.service.impl.OAuth2SuccessHandler;
 
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 
 @Configuration
@@ -47,21 +44,35 @@ public class ProjectSecurityConfig {
         public SecurityFilterChain securityFilterChain(HttpSecurity http,
                         SecurityExceptionHandler securityExceptionHandler)
                         throws Exception {
+                http.cors(config -> config.configurationSource(request -> {
+                        CorsConfiguration configCors = new CorsConfiguration();
 
-                http.cors(config -> config.configurationSource(new CorsConfigurationSource() {
+                        // ✅ Allowed Origins
+                        configCors.setAllowedOrigins(List.of(
+                                        "http://localhost:8080",
+                                        "http://localhost:5173",
+                                        "http://127.0.0.1:8080/",
+                                        "http://127.0.0.1:5173"));
 
-                        @Override
-                        public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                                CorsConfiguration config = new CorsConfiguration();
-                                config.setAllowedOrigins(List.of("http://localhost:8080", "http://localhost:5173"));
-                                config.setAllowedMethods(Collections.singletonList("*"));
-                                config.setAllowedHeaders(Collections.singletonList("*"));
-                                config.setExposedHeaders(List.of("Authorization"));
-                                config.setAllowCredentials(true);
-                                config.setMaxAge(3600L);
-                                return config;
-                        }
+                        // ✅ Allowed Methods (FIXED)
+                        configCors.setAllowedMethods(List.of(
+                                        "GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
+                        // ✅ Allowed Headers (better than "*")
+                        configCors.setAllowedHeaders(List.of(
+                                        "Authorization",
+                                        "Content-Type"));
+
+                        // ✅ Expose headers
+                        configCors.setExposedHeaders(List.of("Authorization"));
+
+                        // ✅ Allow credentials
+                        configCors.setAllowCredentials(true);
+
+                        // ✅ Cache duration
+                        configCors.setMaxAge(3600L);
+
+                        return configCors;
                 }))
                                 .exceptionHandling(ex -> ex
                                                 .authenticationEntryPoint(securityExceptionHandler)
